--- a/index.html
+++ b/index.html
@@ -23,9 +23,12 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.
-  Definitions for HTML BOILERPLATE are displayed as an HTML Comment
-   </p>
+  <p>Hello world! This is HTML5 Boilerplate. <br/>
+    Definitions for HTML BOILERPLATE are displayed as an HTML Comment <br/>
+    <!-- The 'HEAD' element defines the character encoding for the document.
+    
+
+  </p>
   <script src="js/vendor/modernizr-3.7.1.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
