--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
   <p>Hello world! This is HTML5 Boilerplate. <br/>
     Definitions for HTML BOILERPLATE are displayed as an HTML Comment <br/>
     <!-- The 'HEAD' element defines the character encoding for the document.
-    
+         The 'Meta' element provides the metadata about the HTML document.
+
 
   </p>
   <script src="js/vendor/modernizr-3.7.1.min.js"></script>
