FEATURE: Defined 'DocType' Element.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     Definitions for HTML BOILERPLATE are displayed as an HTML Comment <br/>
     <!-- The 'HEAD' element defines the character encoding for the document.
          The 'Meta' element provides the metadata about the HTML document.
+         The Document Type Declaration is a way to tell the browser what type of document it is looking at.
 
 
   </p>
