FEATURE: Defined 'HTML' Element.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
     <!-- The 'HEAD' element defines the character encoding for the document.
          The 'Meta' element provides the metadata about the HTML document.
          The Document Type Declaration is a way to tell the browser what type of document it is looking at.
+         The HTML element's code is made up of sets of characters between angled brackets called tags. The complete tag includes the opening tag, enclosed tag content, and the closing tag.
+         
 
 
   </p>
