FEATURE: Defined 'Link' Element.

--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
     Definitions for HTML BOILERPLATE are displayed as an HTML Comment <br/>
     <!-- The 'HEAD' element defines the character encoding for the document.
          The 'Meta' element provides the metadata about the HTML document.
-         The Document Type Declaration is a way to tell the browser what type of document it is looking at.
-         The HTML element's code is made up of sets of characters between angled brackets called tags. The complete tag includes the opening tag, enclosed tag content, and the closing tag.
+         The 'Document Type' Declaration is a way to tell the browser what type of document it is looking at.
+         The 'HTML' element's code is made up of sets of characters between angled brackets called tags. The complete tag includes the opening tag, enclosed tag content, and the closing tag.
+         The 'Link' element is used to define a relationship between an HTML document and an external resource. This element is most commonly used to define the relations between a document and one or more CSS stylesheets.
          
 
 
