--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
          The 'Document Type' Declaration is a way to tell the browser what type of document it is looking at.
          The 'HTML' element's code is made up of sets of characters between angled brackets called tags. The complete tag includes the opening tag, enclosed tag content, and the closing tag.
          The 'Link' element is used to define a relationship between an HTML document and an external resource. This element is most commonly used to define the relations between a document and one or more CSS stylesheets.
-         
+         The 'Title' element specifies the title of a web page. Title tags are displayed on search engine results pages as clickable headline for a given result. and are important for usability, SEO, and social sharing.
+          
 
 
   </p>
