--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
          The 'Link' element is used to define a relationship between an HTML document and an external resource. This element is most commonly used to define the relations between a document and one or more CSS stylesheets.
          The 'Title' element specifies the title of a web page. Title tags are displayed on search engine results pages as clickable headline for a given result. and are important for usability, SEO, and social sharing.
          The 'Body' element contains all the contents of an HTML document, such as hyperlinks, images, tables, lists, etc.
-          
+         The 'Script' element is used to define a client-side scripts. Such as javascript. The element either contains scripting statements, or it points to an external script file through the src attribute.
 
 
   </p>
